Fix invitation spacing

--- a/src/components/Invitation/Invitation.module.css
+++ b/src/components/Invitation/Invitation.module.css
@@ -30,11 +30,12 @@
 .couple-name {
     margin-top: 3rem;
     margin-bottom: 3rem;
+    line-height: 2.7rem;
 }
 
 .dengan-pasangannya{
-    margin-top: 0.8rem;
-    margin-bottom: 1rem;
+    /* margin-top: 0.8rem;
+    margin-bottom: 1rem; */
 }
 
 .location,
